# openAPIWorker

./: .env_example  .gitignore  Dockerfile  GPTWorker.postman_collection.json  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
requester/: code_list_request_base_mode.py  params.py  requester.py
responser/: responser.py
