[tool.poetry]
name = "openapiworker"
version = "0.1.0"
description = ""
authors = ["kaiqueBellmont <kaiquebellmont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
requests = "^2.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
